# x11-emoji-picker

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README  README.md  install.sh  package.sh  ubuntu-install.sh
.github/workflows/: build.yml
.scripts/: create-emoji-aliases-ini.js  create-emoji-aliases.js  create-emoji-map.js  create-kaomoji-map.js  package.json
cmake/: FindWaylandScanner.cmake
res/: emoji-picker.desktop  xyz.gazatu.EmojiPicker.conf  xyz.gazatu.EmojiPicker.service
res/dbus-1/: xyz.gazatu.EmojiPicker.conf
res/polkit-1/: xyz.gazatu.EmojiPicker.policy
res/systemd/: x11-emoji-picker.service
src/: EmojiLabel.cpp  EmojiLabel.hpp  EmojiLineEdit.cpp  EmojiLineEdit.hpp  EmojiPicker.cpp  EmojiPicker.hpp  EmojiPickerDBusInterface.cpp  EmojiPickerDBusInterface.hpp  EmojiPickerSettings.cpp  EmojiPickerSettings.hpp  EmojiPickerWindow.cpp  EmojiPickerWindow.hpp  EmojiTranslator.cpp  EmojiTranslator.hpp  WindowManager.cpp  WindowManager.hpp  app.cpp  app.hpp  crossdo.cpp  crossdo.h  crossdo.hpp  emojis.cpp  emojis.hpp  emojis.qrc  flowlayout.cpp  flowlayout.h  kaomojis.cpp  kaomojis.hpp  main.cpp  main.qrc  main.qss  uinput.hpp
src/aliases/: github-emojis.ini  gitmoji-emojis.ini
src/i18n/: emojis_cs.cpp  emojis_da.cpp  emojis_de.cpp  emojis_el.cpp  emojis_en.cpp  emojis_es.cpp  emojis_fi.cpp  emojis_fr.cpp  emojis_hr.cpp  emojis_hu.cpp  emojis_it.cpp  emojis_nl.cpp  emojis_pl.cpp  emojis_pt.cpp  emojis_ru.cpp  emojis_sv.cpp
src/res/: x11-emoji-picker.desktop
src/wm/: KF5WindowManager.hpp  SwayWindowManager.hpp  XDoWindowManager.hpp
